--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Authentication With JWT</description>
 	<properties>
 		<java.version>11</java.version>
+		<fastjson.version>1.2.46</fastjson.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -49,6 +50,11 @@
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>${fastjson.version}</version>
 		</dependency>
 	</dependencies>
 
